--- a/index.html
+++ b/index.html
@@ -1,251 +1,192 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <!-- Meta tags -->
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- title -->
-    <title>LSilva Portfólio</title>
-    <!-- CSS -->
-    <link rel="stylesheet" href="css/extends.css" />
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <!-- navbar -->
-    <nav class="navbar">
-      <div class="navbar__content max-width mb-0">
-        <a href="/">
-          <img src="assets/logo.svg" alt="Lucas Silva" />
-        </a>
-        <ul class="navbar__links">
+
+<head>
+  <!-- Meta tags -->
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- title -->
+  <title> JessyBatista</title>
+  <!-- CSS -->
+  <link rel="stylesheet" href="css/extends.css" />
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet" />
+</head>
+
+<body>
+  <!-- navbar -->
+  <nav class="navbar">
+    <div class="navbar__content max-width mb-0">
+      <a id="logo" href="/">
+        <img src="assets/logo.png" alt="Lucas Silva" />
+      </a>
+      <ul class="navbar__links">
+        <li><a href="#header">Início</a></li>
+        <li><a href="#about">Sobre</a></li>
+        <li><a href="#skills">Serviços</a></li>
+        <li><a href="#projects">Orçamento</a></li>
+        <li><a href="#footer">Contato</a></li>
+      </ul>
+      <div class="navbar__mobile">
+        <img src="assets/menu.svg" alt="menu" class="burguer" />
+        <ul class="mobile__links">
           <li><a href="#header">Início</a></li>
           <li><a href="#about">Sobre</a></li>
-          <li><a href="#skills">Habilidades</a></li>
-          <li><a href="#projects">Projetos</a></li>
+          <li><a href="#skills">Serviços</a></li>
+          <li><a href="#projects">Orçamento</a></li>
           <li><a href="#footer">Contato</a></li>
         </ul>
-        <div class="navbar__mobile">
-          <img src="assets/menu.svg" alt="menu" class="burguer" />
-          <ul class="mobile__links">
-            <li><a href="#header">Início</a></li>
-            <li><a href="#about">Sobre</a></li>
-            <li><a href="#skills">Habilidades</a></li>
-            <li><a href="#projects">Projetos</a></li>
-            <li><a href="#footer">Contato</a></li>
-          </ul>
-        </div>
       </div>
-    </nav>
+    </div>
+  </nav>
 
-    <!-- header -->
-    <header id="header" class="max-width">
-      <div class="header__left">
-        <h1>Olá! Sou Lucas Silva Desenvolvedor Fullstack</h1>
-        <p>
-          Desenvolvedor web full-stack com vasta experiência em desenvolvimento
-          de aplicações web escaláveis e responsivas. Sou apaixonado por criar
-          soluções tecnológicas que resolvem problemas reais e que agregam valor
-          aos usuários.
-        </p>
-        <a href="#about" class="btn btn-primary">Saiba Mais!</a>
+  <!-- header -->
+  <header id="header" class="max-width">
+    <div class="header__left">
+      <h1>Olá! Sou Jessica Batista Desenvolvedora Web</h1>
+      <p>
+        Estudante de programação apaixonada em aprender novas linguagens e tecnologias.
+        Com conhecimento em Javascript, MySQL, Node.Js e WordPress,
+        mas sempre em busca de evolução e aprimoração.
+      </p>
+      <a href="#about" class="btn btn-primary">Saiba Mais!</a>
+    </div>
+    <div class="header__right">
+      <div class="header__image">
+        <img src="assets/JessyBatista_batcheditor_fotor.jpeg" alt="Jessica" class="jessica" />
+        <img src="assets/abstract.svg" alt="background" class="background" />
       </div>
-      <div class="header__right">
-        <div class="header__image">
-          <img src="assets/lucas-silva.png" alt="Lucas Silva" class="lucas" />
-          <img src="assets/abstract.svg" alt="background" class="background" />
-        </div>
-      </div>
-    </header>
+    </div>
+  </header>
 
-    <!-- Sobre -->
-    <section id="about" class="about max-width">
-      <div class="about__left">
-        <h2 class="secondary-title">Além do código: quem sou eu?</h2>
-        <p>
-          Que tal se conectar comigo nas redes sociais abaixo e saber mais sobre
-          meu trabalho?
-        </p>
-        <ul>
-          <li>
-            <a href="#"><img src="assets/instagram.svg" alt="Instagram" /></a>
-          </li>
-          <li>
-            <a href="#"><img src="assets/linkedin.svg" alt="Linkedin" /></a>
-          </li>
-          <li>
-            <a href="#"><img src="assets/facebook.svg" alt="Facebook" /></a>
-          </li>
-        </ul>
-      </div>
-      <div class="about__right">
-        <h3 class="tertiary-title mb-m">
-          Desenvolvedor fullstack apaixonado por tecnologia e soluções criativas
-        </h3>
-        <p>
-          Olá, eu sou Lucas Silva, um desenvolvedor fullstack apaixonado por
-          tecnologia e soluções criativas. Com mais de 3 anos de experiência em
-          desenvolvimento web, tenho trabalhado com diversas tecnologias e
-          plataformas para criar soluções robustas e escaláveis que atendam às
-          necessidades dos clientes.
-        </p>
-        <p>
-          Eu amo o desafio de encontrar soluções inovadoras e criativas para
-          problemas complexos e estou sempre buscando aprender e crescer como
-          profissional.
-        </p>
-      </div>
-    </section>
-
-    <!-- habilidades -->
-    <section id="skills" class="skills">
-      <div class="skills__content max-width">
-        <h2 class="tertiary-title">Minha caixinha de ferramentas</h2>
-        <p class="description">
-          Descubra as habilidades e ferramentas que domino e que me permitem
-          criar soluções criativas e funcionais para meus clientes.
-        </p>
-        <ul>
-          <li class="skills__item">
-            <div class="image-container">
-              <img src="assets/notebook.png" alt="Desenvolvimento Web" />
-            </div>
-            <h3>Desenvolvimento Web</h3>
-            <p>
-              Experiência em desenvolvimento fullstack com foco em tecnologias
-              modernas.
-            </p>
-          </li>
-          <li class="skills__item">
-            <div class="image-container">
-              <img src="assets/colors.png" alt="Web Design" />
-            </div>
-            <h3>Web Design</h3>
-            <p>
-              Habilidade em criar layouts modernos e responsivos, com foco na
-              experiência do usuário.
-            </p>
-          </li>
-          <li class="skills__item">
-            <div class="image-container">
-              <img src="assets/phone.png" alt="UX/UI Design" />
-            </div>
-            <h3>UX/UI Design</h3>
-            <p>
-              Conhecimentos em design de interface e experiência do usuário
-              visualmente atraentes e intuitivas.
-            </p>
-          </li>
-          <li class="skills__item">
-            <div class="image-container">
-              <img src="assets/files.png" alt="Gerenciamentos de versões" />
-            </div>
-            <h3>Gerenciamentos de versões</h3>
-            <p>
-              Experiência em ferramentas de gerenciamento de versão para
-              controle de projetos.
-            </p>
-          </li>
-        </ul>
-      </div>
-    </section>
-
-    <!-- Projetos -->
-    <section id="projects" class="projects max-width">
-      <div class="projects__content">
-        <h2 class="secondary-title">Projetos em Destaque</h2>
-        <p>
-          De ideias abstratas a projetos bem-sucedidos, aqui estão alguns dos
-          meus trabalhos mais recentes
-        </p>
-      </div>
+  <!-- Sobre -->
+  <section id="about" class="about max-width">
+    <div class="about__left">
+      <h2 class="secondary-title">Além do código: quem sou eu?</h2>
+      <p>
+        Te convido a conhecer mais sobre mim e meus projetos!
+      </p>
       <ul>
         <li>
-          <div class="image">
-            <img src="assets/task-manager.png" alt="Gerenciamento de tarefas" />
-          </div>
-          <div class="projects__info">
-            <h3 class="tertiary-title">
-              Sistema de gerenciamento de tarefas DEF
-            </h3>
-            <p>
-              Sistema web desenvolvido para a empresa DEF, com funcionalidades
-              como cadastro de tarefas, atribuição de responsáveis e
-              acompanhamento do status das atividades.
-            </p>
-            <a href="#">Leia mais &rarr;</a>
-          </div>
-        </li>
-        <li class="projects__reversed-list">
-          <div class="image">
-            <img src="assets/ecommerce.png" alt="ecommerce" />
-          </div>
-          <div class="projects__info">
-            <h3 class="tertiary-title">
-              Desenvolvimento de Loja Virtual MeuSofazim.com
-            </h3>
-            <p>
-              Site de e-commerce desenvolvido do zero com tecnologias como React
-              e Node.js, além de integração com diversos meios de pagamento e
-              entrega.
-            </p>
-            <a href="#">Leia mais &rarr;</a>
-          </div>
+          <a href="#"><img src="assets/instagram-logo.svg" alt="Instagram" /></a>
         </li>
         <li>
-          <div class="image">
-            <img src="assets/delivery.png" alt="delivery" />
-          </div>
-          <div class="projects__info">
-            <h3 class="tertiary-title">
-              App de delivery e Dashboard DeliveryJá!
-            </h3>
-            <p>
-              Aplicativo mobile desenvolvido para a empresa DeliveryJá!,
-              permitindo a realização de pedidos e acompanhamento em tempo real
-              do status da entrega.
-            </p>
-            <a href="#">Leia mais &rarr;</a>
-          </div>
+          <a href="#"><img src="assets/linkedin-logo.svg" alt="Linkedin" /></a>
+        </li>
+        <li>
+          <a href="#"><img src="assets/github-logo.svg" alt="GitHub" /></a>
         </li>
       </ul>
-    </section>
+    </div>
+    <div class="about__right">
+      <h3 class="tertiary-title mb-m">
+        Desenvolvedora FullStack com foco em Web Design
+      </h3>
+      <p>
+        Olá, meu nome é Jessica Batista, tenho 19 anos e sou uma estudante de programação apaixonada em aprender novas
+        linguagens e tecnologias.
+        Tenho conhecimento em Javascript, MySQL, Node.Js e WordPress,
+        mas sempre procuro evoluir e me aprimorar.
+      </p>
+      <p>
+        Atualmente, faço parte do Programadores do Amanhã, onde estou desenvolvendo minhas habilidades de Full Stack,
+        inglês e SoftSkills.
+      </p>
+        <p>
+        Apesar de ser uma pessoa introvertida, estou sempre na procura de evoluir. Sou atenciosa e dedicada, sempre
+        disposta a ajudar e buscar soluções.
+        </p>
+    </div>
+  </section>
 
-    <!-- Footer -->
-    <footer id="footer">
-      <div class="footer__content max-width mb-0">
-        <h2 class="tertiary-title mb-s">Vamos conversar?</h2>
-        <p class="mb-m">
-          Ficarei feliz em saber mais sobre seus projetos e como podemos
-          trabalhar juntos para torná-los realidade.
-        </p>
-        <div class="footer__contact mb-m">
-          <span class="mb-m">ficticio@email.com</span>
-          <span>00 00000-0000</span>
+  <!-- habilidades -->
+  <section id="skills" class="skills">
+    <div class="skills__content max-width">
+      <h2 class="tertiary-title">Meus Serviços</h2>
+      <ul>
+        <li class="skills__item">
+          <div class="image-container">
+            <img src="assets/palette.svg" alt="Web Design" />
+          </div>
+          <h3>Web Design</h3>
+          <p>
+            Te ajudo a impulsionar a sua marca/serviço através da criação de um site único e personalizado. Mostrando a qualidade do seu trabalho para o mundo e alcançando novos patamares!   
+            </p>
+        </li>
+        <li class="skills__item">
+          <div class="image-container">
+            <img src="assets/device-mobile.svg" alt="UX/UI Design" />
+          </div>
+          <h3>Social Media</h3>
+          <p>
+            Transformo suas ideias em postagens para o feed e stories de seu instagram, dando uma identidade visual única e profissionalizando seu perfil!
+          </p>
+        </li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- Projetos -->
+  <section id="projects" class="projects">
+  <form class="contato" method="get">
+    <div class="container">
+      <div class="title">
+        <h1 id="forms-h1">Faça seu orçamento!</h1>
+        <h2>Preencha o formulário abaixo: </h2>
+        <div class="form">
+          <div class="configImg">
+            <img src="assets/form.png">
+            <div class="inputStyle">
+              <input type="text" name="username" placeholder="Digite seu nome aqui" autocomplete="name" required>
+              <a>Mensagem de erro</a>
+              <input type="email" name="email" placeholder="Digite seu email aqui" autocomplete="email"required >
+              <a>Mensagem de erro</a>
+              <input type="number" name="phone" placeholder="Digite seu telefone aqui" autocomplete="tel" required>
+              <a>Mensagem de erro</a>
+  
+            </div>
+          </div>
+          <div class="inputStyle">
+            <textarea resi name="message" placeholder="Escreva o serviço desejado..." required></textarea>
+          </div>
+          <div>
+            <button id="btnLimpar" type="reset" onclick="clearForm()">Limpar</button>
+            <button id="btnEnviar" type="submit">Enviar</button>
+          </div>
         </div>
-        <ul class="mb-l">
-          <li>
-            <a href="#"><img src="assets/instagram.svg" alt="Instagram" /></a>
-          </li>
-          <li>
-            <a href="#"><img src="assets/linkedin.svg" alt="Linkedin" /></a>
-          </li>
-          <li>
-            <a href="#"><img src="assets/facebook.svg" alt="Facebook" /></a>
-          </li>
-        </ul>
-        <p class="footer__copyright">
-          © 2023 Lucas Silva. Todos os direitos reservados.
-        </p>
       </div>
-    </footer>
-    <!-- script -->
-    <script src="scripts/index.js"></script>
-  </body>
+    </div>
+    </form>
+  </section>
+
+  <!-- Footer -->
+  <footer id="footer">
+    <div class="footer__content max-width mb-0">
+      <div class="footer__contact mb-m">
+       <a href="mailto:jb229507@gmail"> <img src="assets/envelope-simple.svg" alt="email"><span class="mb-m">jb229507@gmail.com</span></a>
+        <a href="#"> <img src="assets/whatsapp-logo.svg" alt="whatsapp" /></a><span>(31) 97568-2614</span>
+      </div>
+      <ul class="mb-l">
+        <li>
+          <a href="#"><img src="assets/instagram-logo.svg" alt="Instagram" /></a>
+        </li>
+        <li>
+          <a href="#"><img src="assets/linkedin-logo.svg" alt="Linkedin" /></a>
+        </li>
+        <li>
+          <a href="#"><img src="assets/github-logo.svg" alt="GitHub" /></a>
+        </li>
+      </ul>
+      <p class="footer__copyright">
+        © 2024 Jessica Batista.
+      </p>
+    </div>
+  </footer>
+  <!-- script -->
+  <script src="scripts/index.js"></script>
+</body>
+
 </html>
